option java_package = "com.mi.game.network.data.bin";

//Initialize 

message BINInitializeRequest {
	required string cp = 1;
	required string appVersion = 2;
	optional string deviceId = 3;
	optional string deviceInfo = 4;
	optional string ipAddress = 5;
	optional string country = 6;
	optional string language = 7;
	optional string pakageName = 8;
}

message BINInitializeResponse {
    required bool responseCode = 1;
    optional string message = 2;
	optional string currentAppVersion = 3;
	optional string downloadUrl = 4;
	optional string cashCurrency = 5; 
	optional string goldCurrency = 6;
	optional bool forceUpdate = 7;
	optional bool enableQuickPlay = 8;
	optional bool enableCashSystem = 9;
	optional bool enablePurchaseCash = 10;//bật/ tắt chức năng nạp thẻ
	optional bool enableTopup = 11;//bật tắt chức năng đổi thưởng
}

//End Initialize 
